--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "email": "victor.1995.18@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+      "php": "^5.6.0"
+    }
 }
