--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,5 @@
             "email": "victor.1995.18@gmail.com"
         }
     ],
-    "require": {
-    	"stack": "heroku-16",
-      "php": "^5.6.0"
-    }
+    "require": {}
 }
